remove contents table. Add paragraph + heading tests

--- a/element-test.html
+++ b/element-test.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML5 Test Page</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
@@ -13,49 +14,6 @@
 			<h1>HTML5 Test Page</h1>
 			<p>This is a test page filled with common HTML elements to be used to provide visual feedback whilst building CSS systems and frameworks.</p>
 		</header>
-
-		<nav role="navigation">
-			<ul>
-				<li>
-					<a href="#text">Text</a>
-					<ul>
-						<li><a href="#text__headings">Headings</a></li>
-						<li><a href="#text__paragraphs">Paragraphs</a></li>
-						<li><a href="#text__blockquotes">Blockquotes</a></li>
-						<li><a href="#text__lists">Lists</a></li>
-						<li><a href="#text__hr">Horizontal rules</a></li>
-						<li><a href="#text__tables">Tabular data</a></li>
-						<li><a href="#text__code">Code</a></li>
-						<li><a href="#text__inline">Inline elements</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#embedded">Embedded content</a>
-					<ul>
-						<li><a href="#embedded__images">Images</a></li>
-						<li><a href="#embedded__audio">Audio</a></li>
-						<li><a href="#embedded__video">Video</a></li>
-						<li><a href="#embedded__canvas">Canvas</a></li>
-						<li><a href="#embedded__meter">Meter</a></li>
-						<li><a href="#embedded__progress">Progress</a></li>
-						<li><a href="#embedded__svg">Inline SVG</a></li>
-						<li><a href="#embedded__iframe">IFrames</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#forms">Form elements</a>
-					<ul>
-						<li><a href="#forms__input">Input fields</a></li>
-						<li><a href="#forms__select">Select menus</a></li>
-						<li><a href="#forms__checkbox">Checkboxes</a></li>
-						<li><a href="#forms__radio">Radio buttons</a></li>
-						<li><a href="#forms__textareas">Textareas</a></li>
-						<li><a href="#forms__html5">HTML5 inputs</a></li>
-						<li><a href="#forms__action">Action buttons</a></li>
-					</ul>
-				</li>
-			</ul>
-		</nav>
 
 		<main role="main">
 			<section id="text">
@@ -68,7 +26,7 @@
 
 					<div>
 						<h1>Heading 1</h1>
-						<h2>Heading 2</h2>
+						<h2>Heading 2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius dolor explicabo quas delectus laboriosam earum deleniti ullam autem, et asperiores beatae voluptate dolorem architecto quibusdam minima illo distinctio, vero natus.</h2>
 						<h3>Heading 3</h3>
 						<h4>Heading 4</h4>
 						<h5>Heading 5</h5>
@@ -83,6 +41,15 @@
 
 					<div>
 						<p>A paragraph (from the Greek paragraphos, “to write beside” or “written beside”) is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+						<h1>Heading 1</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente cumque in explicabo fugiat? Molestiae fuga, ea sapiente sint sed recusandae dolorem natus illo in, veniam dicta ad est consequuntur, aliquam.</p>
+						<h2>Heading 2</h2>
+						<p>Soluta sit asperiores temporibus repellat eaque, rerum repudiandae officia doloremque eos ipsum, magnam officiis, esse facilis dolore quia qui odit! Quos sit aliquam nostrum nam non officiis eum ab culpa.</p>
+						<h3>Heading 3</h3>
+						<p>Facilis mollitia voluptates, inventore cumque aperiam pariatur recusandae amet aut voluptatibus deleniti! Nihil ratione suscipit corporis, reprehenderit dicta modi eos iure eaque qui, facilis placeat quo nam. Adipisci, quisquam, vel.</p>
+						<h4>Heading 4</h4>
+						<p>Ipsa veniam ducimus praesentium laudantium sunt earum eius nam, autem itaque iure. Doloremque, ducimus, maxime! Labore ut esse ab iste qui, inventore repellat, voluptas vero pariatur! Voluptatem voluptas explicabo molestias.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi obcaecati deleniti commodi quia repellat laborum fugit deserunt voluptates at. Repudiandae ut quas, similique fugiat! Laudantium sapiente aliquid at inventore expedita repudiandae saepe pariatur nobis beatae enim consectetur consequatur facere, cupiditate, quasi dolores qui ratione rem temporibus sequi doloremque odit ea aliquam quod. Tempore blanditiis, porro neque repellat, voluptates aspernatur veritatis.</p>
 					</div>
 
 					<footer><p><a href="#top">[Top]</a></p></footer>
