Video splash test

--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kanec test</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
-	Test
+	<header id="splash">
+		<video autoplay loop poster="/assets/images/splash.jpg" class="bgvid">
+			<source src="/assets/images/splash.webm" type="video/webm">
+			<source src="/assets/images/splash.mp4" type="video/mp4">
+		</video>
+		<div class="container">
+			<h1><span>Kane Clover</span> / Manchester, UK</h1>
+			<h2>UX Design &amp; Full Stack Web Development</h2>
+		</div>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Work</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<section id="technology">
+		<div class="container">
+			Tech logos here		
+		</div>
+	</section>
+	<section id="work">
+		Work slider here
+	</section>
+	<section id="contact">
+		<div class="container">
+			Contact form		
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			Footer				
+		</div>
+	</footer>
 </body>
 </html>
